--- a/index.html
+++ b/index.html
@@ -8,8 +8,15 @@
 </head>
 <body>
     <header>ALURAFLIX</header> 
+<section>
+    <div> 
     <h1>Através do aranha verso supera o primeiro filme?</h1>
     <p>#homem-aranha</p>
+    </div>
+
+    <div> 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/HB8K0omTmxU?si=YRrMbPNb0ycaYBVT" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>   
+    </div>
+</section>
 </body>
 </html>
