--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <h2>FILMES E SÉRIES</h2>
 <div>
     #lista de videos
+    <a href="https://www.youtube.com/watch?v=2x-2iYxgMFU"><img src="https://img.youtube.com/vi/2x-2iYxgMFU/maxresdefault.jpg"/a>
 </div>
 </section>
 </body>
