--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </section>
 <section>
 <h2>FILMES E SÉRIES</h2>
-<div>
+<div class="categoria-videos">
     #lista de videos
     <a href="https://www.youtube.com/watch?v=2x-2iYxgMFU"><img src="https://img.youtube.com/vi/2x-2iYxgMFU/maxresdefault.jpg">
     <a href="https://www.youtube.com/watch?v=2x-2iYxgMFU"><img src="https://img.youtube.com/vi/CyiiEJRZjSU/maxresdefault.jpg">
